fixed text spacing on landing page

--- a/styling/style.css
+++ b/styling/style.css
@@ -20,6 +20,9 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  height: 90%;
+  position: absolute;
+  top: 0;
 }
 
 @media (max-width: 800px) {
@@ -34,7 +37,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   text-align: center;
 }
 
@@ -53,6 +56,7 @@ main {
   font-weight: 500;
   line-height: 28px;
   color: rgb(0, 171, 186);
+  padding: 40px 0;
 }
 
 button.start-quiz {
